# policy-health-monitor

./: .gitignore  30_day_validation_plan.md  CHANGELOG.md  README.md  conftest.py  proof_of_concept.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
benchmark/: RESULTS.md  RESULTS_REAL.md  RESULTS_ROBOMIMIC.md  RESULTS_ROBOMIMIC_GRADUAL.md  conftest.py  results_collapse.csv  results_shift.csv  run_benchmark.py
benchmark/data/: fixture_real_seed0.npz  real_embeddings_seed0.npz  real_embeddings_seed1.npz  real_embeddings_seed2.npz  real_embeddings_seed3.npz  real_embeddings_seed4.npz
benchmark/lib/: baselines.py  generator.py  labeling.py  metrics.py  phm_detector.py  real_stream.py  rnd.py
benchmark/real/: robomimic_eval.py  robomimic_eval_gradual.py
benchmark/real/cache/: rollouts_seed99000.npz
benchmark/scripts/: extract_real_embeddings.py  rnd_torch_worker.py
benchmark/tests/: test_detectors.py  test_generator.py  test_labeling.py  test_metrics.py  test_real_stream.py
docs/: BUILD_REPORT.md  REVIEW_PUNCHLIST.md  architecture.dot  lab_card_pending_hardware.md
site/: index.html
src/phm_arbiter/: conftest.py  package.xml  pyproject.toml  setup.cfg  setup.py
src/phm_arbiter/config/: phm_arbiter.yaml
src/phm_arbiter/launch/: arbiter.launch.py
src/phm_arbiter/phm_arbiter/: __init__.py  _core.py  arbiter_node.py
src/phm_arbiter/tests/: test_arbiter.py  test_arbiter_safety_logic.py
src/phm_core/: README.md  conftest.py  package.xml  pyproject.toml  setup.py
src/phm_core/phm_core/: __init__.py  calibration.py  detector.py  hysteresis.py  severity.py
src/phm_core/tests/: test_calibration.py  test_detector.py  test_hysteresis.py  test_severity.py
src/phm_detectors/: conftest.py  package.xml  pyproject.toml  setup.cfg  setup.py
src/phm_detectors/config/: detectors.yaml
src/phm_detectors/launch/: detectors.launch.py
src/phm_detectors/phm_detectors/: __init__.py  _core.py  phm_detectors_node.py
src/phm_detectors/tests/: test_adapters.py  test_node_smoke.py
src/phm_msgs/: CMakeLists.txt  package.xml
src/phm_msgs/msg/: DetectorVerdict.msg  PolicyEmbedding.msg  PolicyHealthStatus.msg
src/phm_ood/: conftest.py  package.xml  pyproject.toml  setup.cfg  setup.py
src/phm_ood/config/: phm_ood.yaml
src/phm_ood/launch/: phm_ood.launch.py
src/phm_ood/phm_ood/: __init__.py  _core.py  main.py  node.py
src/phm_ood/tests/: test_ood_core.py
src/phm_ood_cpp/: CMakeLists.txt  package.xml
src/phm_ood_cpp/include/phm_ood_cpp/: backend.hpp  ood_core.hpp  severity.hpp
src/phm_ood_cpp/src/: backend_eigen.cpp  backend_plain.cpp  backend_torch.cpp  bench_latency.cpp  ood_core.cpp  ood_node.cpp
src/phm_ood_cpp/test/: test_ood_core.cpp
src/phm_recovery/: conftest.py  package.xml  pyproject.toml  setup.cfg  setup.py
src/phm_recovery/config/: recovery.yaml
src/phm_recovery/launch/: recovery.launch.py
src/phm_recovery/phm_recovery/: __init__.py  _core.py  recovery_node.py
src/phm_recovery/tests/: test_arbiter_recovery_integration.py  test_health_action_mapper.py  test_safety_envelope.py
src/phm_sim/: conftest.py  package.xml  pyproject.toml  setup.cfg  setup.py
src/phm_sim/config/: phm_sim.yaml
src/phm_sim/launch/: sim.launch.py
src/phm_sim/phm_sim/: __init__.py  _sim_core.py  embedding_publisher_node.py
src/phm_sim/tests/: test_sim_core.py
vla_monitor_demo/: README.md  alpha_sweep.csv  harness.py  physx_style.mplstyle  physx_style.py  run_demo.py  test_harness.py
