<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>phm_arbiter</name>
  <version>0.1.0</version>
  <description>PHM arbiter: fuses DetectorVerdict messages into a single PolicyHealthStatus on /phm/health.</description>
  <maintainer email="yusuf.a.guenena@gmail.com">Yusuf Guenena</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>phm_msgs</depend>

  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
