<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>phm_core</name>
  <version>0.1.0</version>
  <description>
    Pure-Python detector logic for the Policy Health Monitor: Detector ABC,
    hysteresis, calibration, and severity. No ROS dependency; the sibling rclpy
    packages are thin wrappers over this logic.
  </description>
  <maintainer email="yusuf.a.guenena@gmail.com">Yusuf Guenena</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>python3-numpy</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
