[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "phm_core"
version = "0.1.0"
description = "Pure-Python detector logic for the Policy Health Monitor: Detector ABC, Hysteresis, calibration, severity. No ROS dependency."
authors = [{ name = "Yusuf Guenena", email = "youssefguenena@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy==1.26.4"]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.setuptools.packages.find]
where = ["."]
include = ["phm_core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Avoid auto-loading pytest plugins shipped with a sourced ROS 2 Humble
# environment (ament_cmake, launch_testing), which assume a ROS graph and pull
# in deps the pure-Python venv does not have. phm_core has no ROS dependency.
addopts = "-p no:cacheprovider"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
