<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>phm_ood</name>
  <version>0.1.0</version>
  <description>
    Rolling-spread OOD detector lifecycle node for the Policy Health Monitor.
    Subscribes to PolicyEmbedding on a configurable topic, maintains a rolling
    window, computes rolling_spread via phm_core.calibration, compares against
    a calibrated threshold (low spread = OOD), applies phm_core.Hysteresis,
    and publishes a DetectorVerdict on /phm/verdicts with source='phm_ood'.
  </description>
  <maintainer email="youssefguenena@gmail.com">Yusuf Guenena</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>lifecycle_msgs</depend>
  <depend>rcl_interfaces</depend>
  <depend>phm_msgs</depend>
  <depend>python_cmake_module</depend>

  <exec_depend>phm_core</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
