<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>phm_recovery</name>
  <version>0.1.0</version>
  <description>
    PHM Recovery Node: subscribes to /phm/health (PolicyHealthStatus) and
    publishes zero-velocity Twist on /phm/cmd_vel while HOLD or STOP_AND_HOLD
    is active. Ports the HELIX SafetyEnvelope (per-action cooldown, RESUME
    exempt from cooldown, action allowlist). Provides a pluggable rewind hook
    for return-to-last-safe-waypoint (v0: logs and holds).
  </description>
  <maintainer email="yusuf.a.guenena@gmail.com">Yusuf Guenena</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>rcl_interfaces</depend>

  <!-- phm_msgs provides PolicyHealthStatus (the subscription topic). -->
  <depend>phm_msgs</depend>

  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
