<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>phm_sim</name>
  <version>0.1.0</version>
  <description>
    Replay and perturbation publisher for the Policy Health Monitor.
    Publishes phm_msgs/PolicyEmbedding on /policy/embedding, cycling through
    an in-distribution phase (healthy rolling spread) and an OOD phase
    (collapsed spread), enabling end-to-end smoke tests of phm_ood and
    phm_arbiter without a real policy process.
  </description>
  <maintainer email="youssefguenena@gmail.com">Yusuf Guenena</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>phm_msgs</depend>

  <!-- Pure-Python deps resolved via the venv / overlay -->
  <exec_depend>python3-numpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
